--- a/experiments/ssl4eo/conf/etm_sr_cdl.yaml
+++ b/experiments/ssl4eo/conf/etm_sr_cdl.yaml
@@ -7,7 +7,7 @@ module:
   learning_rate: 1e-4
   learning_rate_schedule_patience: 6
   in_channels: 6
-  num_classes: 17
+  num_classes: 134
   num_filters: 64
   ignore_index: 0
   weight_decay: 0
@@ -16,7 +16,7 @@ datamodule:
   _target_: torchgeo.datamodules.SSL4EOLBenchmarkDataModule
   root: "/mnt/SSD2/nils/torchgeo/experiments/ssl4eo/downstream"
   input_sensor: etm_sr
-  mask_product: nlcd
+  mask_product: cdl
   batch_size: 512
   num_workers: 6
 
@@ -31,7 +31,7 @@ trainer:
 
 program:
   seed: 0
-  output_dir: output/etm_sr_nlcd/
-  log_dir: logs/etm_sr_nlcd/
+  output_dir: output/etm_sr_cdl/
+  log_dir: logs/etm_sr_cdl/
   overwrite: True
   experiment_name: test_downstream_etm_sr
