--- a/experiments/ssl4eo/conf/oli_tirs_toa_resnet50_unet_imagenet_nlcd.yaml
+++ b/experiments/ssl4eo/conf/oli_tirs_toa_resnet50_unet_imagenet_nlcd.yaml
@@ -2,23 +2,23 @@ module:
   _target_: torchgeo.trainers.SemanticSegmentationTask
   loss: "ce"
   model: "unet"
-  backbone: "resnet18"
+  backbone: "resnet50"
   weights: true
-  learning_rate: 1e-4
+  learning_rate: 0.003
   learning_rate_schedule_patience: 6
-  in_channels: 9
-  num_classes: 134
+  in_channels: 11
+  num_classes: 17
   num_filters: 64
   ignore_index: 0
-  weight_decay: 0
+  weight_decay: 0.01
 
 datamodule:
   _target_: torchgeo.datamodules.SSL4EOLBenchmarkDataModule
   root: "/mnt/SSD2/nils/torchgeo/experiments/ssl4eo/downstream"
-  input_sensor: etm_toa
-  mask_product: cdl
+  input_sensor: oli_tirs_toa
+  mask_product: nlcd
   batch_size: 512
-  num_workers: 4
+  num_workers: 6
 
 trainer:
   _target_: lightning.pytorch.Trainer
@@ -31,7 +31,7 @@ trainer:
 
 program:
   seed: 0
-  output_dir: output/etm_toa_cdl/
-  log_dir: logs/etm_toa_cdl/
+  output_dir: output/oli_tirs_toa_nlcd/
+  log_dir: logs/oli_tirs_toa_nlcd/
   overwrite: True
-  experiment_name: test_downstream_etm_toa
+  experiment_name: test_downstream_oli_tirs_toa_nlcd
