--- a/experiments/ssl4eo/conf/etm_sr_resnet18_unet_random_nlcd.yaml
+++ b/experiments/ssl4eo/conf/etm_sr_resnet18_unet_random_nlcd.yaml
@@ -3,11 +3,11 @@ module:
   loss: "ce"
   model: "unet"
   backbone: "resnet18"
-  weights: true
-  learning_rate: 1e-4
+  weights: false
+  learning_rate: 0.003
   learning_rate_schedule_patience: 6
-  in_channels: 9
-  num_classes: 134
+  in_channels: 6
+  num_classes: 17
   num_filters: 64
   ignore_index: 0
   weight_decay: 0
@@ -15,8 +15,8 @@ module:
 datamodule:
   _target_: torchgeo.datamodules.SSL4EOLBenchmarkDataModule
   root: "/mnt/SSD2/nils/torchgeo/experiments/ssl4eo/downstream"
-  input_sensor: etm_toa
-  mask_product: cdl
+  input_sensor: etm_sr
+  mask_product: nlcd
   batch_size: 512
   num_workers: 4
 
@@ -31,7 +31,7 @@ trainer:
 
 program:
   seed: 0
-  output_dir: output/etm_toa_cdl/
-  log_dir: logs/etm_toa_cdl/
+  output_dir: output/etm_sr_nlcd/
+  log_dir: logs/etm_sr_nlcd/
   overwrite: True
-  experiment_name: test_downstream_etm_toa
+  experiment_name: test_downstream_etm_sr
