--- a/experiments/ssl4eo/conf/oli_sr_resnet18_unet_imagenet_nlcd.yaml
+++ b/experiments/ssl4eo/conf/oli_sr_resnet18_unet_imagenet_nlcd.yaml
@@ -4,7 +4,7 @@ module:
   model: "unet"
   backbone: "resnet18"
   weights: true
-  learning_rate: 1e-4
+  learning_rate: 0.001
   learning_rate_schedule_patience: 6
   in_channels: 7
   num_classes: 17
