--- a/experiments/ssl4eo/conf/etm_toa_cdl.yaml
+++ b/experiments/ssl4eo/conf/etm_toa_cdl.yaml
@@ -17,7 +17,7 @@ datamodule:
   root: "/mnt/SSD2/nils/torchgeo/experiments/ssl4eo/downstream"
   input_sensor: etm_toa
   mask_product: cdl
-  batch_size: 512
+  batch_size: 256
   num_workers: 4
 
 trainer:
@@ -27,7 +27,7 @@ trainer:
     - 0
   min_epochs: 50
   max_epochs: 100
-  precision: 16
+  # precision: 16
 
 program:
   seed: 0
