--- a/conf/ssl4eo_benchmark_oli_sr_nlcd_resnet18_fcn.yaml
+++ b/conf/ssl4eo_benchmark_oli_sr_nlcd_resnet18_fcn.yaml
@@ -1,38 +1,29 @@
 module:
   _target_: torchgeo.trainers.SemanticSegmentationTask
-  model: "unet"
+  model: "fcn"
   backbone: "resnet18"
-  weights: true
-  learning_rate: 0.001
+  weights: null
   in_channels: 7
   num_classes: 14
+  num_filters: 64
   loss: "ce"
   class_weights: [0, 0.00640476, 0.11232852, 0.12934777, 0.05883383, 0.10792264, 0.00483846, 0.05689931, 0.0196849, 0.04278681, 0.05963887, 0.08670033, 0.1356737, 0.17894011]
-  learning_rate_schedule_patience: 6
-  num_filters: 64
   ignore_index: 0
+  learning_rate: 1e-3
+  learning_rate_schedule_patience: 6
   weight_decay: 0
 
 datamodule:
   _target_: torchgeo.datamodules.SSL4EOLBenchmarkDataModule
   root: "/mnt/SSD2/nils/torchgeo/experiments/ssl4eo/downstream"
-  input_sensor: oli_sr
-  mask_product: nlcd
-  batch_size: 512
-  num_workers: 6
+  sensor: "oli_sr"
+  product: "nlcd"
+  classes: [0, 11, 21, 22, 31, 41, 42, 43, 52, 71, 81, 82, 90, 95]
+  batch_size: 256
+  num_workers: 4
 
 trainer:
   _target_: lightning.pytorch.Trainer
   accelerator: gpu
-  devices:
-    - 0
-  min_epochs: 50
+  min_epochs: 20
   max_epochs: 100
-  precision: 16
-
-program:
-  seed: 0
-  output_dir: output/oli_sr_nlcd/
-  log_dir: logs/oli_sr_nlcd/
-  overwrite: True
-  experiment_name: test_downstream_oli_sr
