--- a/pyproject.toml
+++ b/pyproject.toml
@@ -202,7 +202,7 @@ disallow_incomplete_defs = true
 disallow_untyped_decorators = true
 
 # Configuring warnings
-warn_redundant_casts = true
+warn_redundant_casts = false  # remove if/when we drop ty
 warn_unused_ignores = false  # remove if/when we drop ty
 warn_no_return = true
 warn_return_any = true
